Added ScheduledBatchAccount class and ScheduledBatchParams CS

--- a/force-app/main/default/classes/ScheduledBatch.cls
+++ b/force-app/main/default/classes/ScheduledBatch.cls
@@ -2,8 +2,27 @@
  * Created by Sergey Krivorotov.
  */
 
-public abstract with sharing class ScheduledBatch implements Database.Batchable {
+public abstract with sharing class ScheduledBatch implements Database.Batchable<SObject> {
 
-    public void finish(Database.BatchableContext BC){}
+    public class ScheduledBatchException extends Exception {
+    }
+
+    private String settingName;
+
+    public void setSettingName(String name) {
+        settingName = name;
+    }
+
+    public void finish(Database.BatchableContext BC) {
+        if (settingName != null) {
+            System.debug('Inside if');
+            ScheduledBatchParams__c params = ScheduledBatchParams__c.getValues(settingName);
+            System.debug('Params: ' + params);
+        } else {
+            System.debug('Inside else');
+            throw new ScheduledBatchException('Setting Name not defined' );
+        }
+
+    }
 
 }
