Added ScheduledBatchExecutorTest test class

--- a/force-app/main/default/classes/ScheduledBatch.cls
+++ b/force-app/main/default/classes/ScheduledBatch.cls
@@ -1,28 +1,23 @@
 /**
  * Created by Sergey Krivorotov.
+ *
+ * Parent class for Batches. Extend this class to implement Batches for ScheduledBatchExecutor.
  */
 
-public abstract with sharing class ScheduledBatch implements Database.Batchable<SObject> {
+public abstract with sharing class ScheduledBatch implements Database.Batchable<SObject>, Database.Stateful {
 
     public class ScheduledBatchException extends Exception {
     }
 
-    private String settingName;
+    public abstract Type getType();
 
-    public void setSettingName(String name) {
-        settingName = name;
-    }
-
-    public void finish(Database.BatchableContext BC) {
-        if (settingName != null) {
-            System.debug('Inside if');
-            ScheduledBatchParams__c params = ScheduledBatchParams__c.getValues(settingName);
-            System.debug('Params: ' + params);
-        } else {
-            System.debug('Inside else');
-            throw new ScheduledBatchException('Setting Name not defined' );
-        }
-
+    public void finish(Database.BatchableContext bc) {
+        ScheduledBatchParams__c params = ScheduledBatchParams__c.getValues(getType().getName());
+        Long startDateMS = [SELECT CreatedDate FROM AsyncApexJob WHERE Id = :bc.getJobId()].CreatedDate.getTime();
+        Long executionTimeMS = System.now().getTime() - startDateMS;
+        Integer executionTimeMinutes = (executionTimeMS / 1000 / 60).intValue();
+        Integer delay = params.Interval__c.intValue() - executionTimeMinutes;
+        ScheduledBatchExecutor.execute(getType(), delay);
     }
 
 }
