--- a/force-app/main/default/classes/ScheduledBatch.cls
+++ b/force-app/main/default/classes/ScheduledBatch.cls
@@ -6,18 +6,23 @@
 
 public abstract with sharing class ScheduledBatch implements Database.Batchable<SObject>, Database.Stateful {
 
+    public ScheduledBatchParams__c params;
+
+    public ScheduledBatch() {
+        params = ScheduledBatchParams__c.getValues(getType().getName());
+    }
+
     public class ScheduledBatchException extends Exception {
     }
 
     public abstract Type getType();
 
     public void finish(Database.BatchableContext bc) {
-        ScheduledBatchParams__c params = ScheduledBatchParams__c.getValues(getType().getName());
         Long startDateMS = [SELECT CreatedDate FROM AsyncApexJob WHERE Id = :bc.getJobId()].CreatedDate.getTime();
         Long executionTimeMS = System.now().getTime() - startDateMS;
         Integer executionTimeMinutes = (executionTimeMS / 1000 / 60).intValue();
         Integer delay = params.Interval__c.intValue() - executionTimeMinutes;
-        ScheduledBatchExecutor.execute(getType(), delay);
+        ScheduledBatchExecutor.execute(this, delay);
     }
 
 }
